# ci-aws-lambda

./: .gitignore  README.md
src/: .example-env  lambda_function.py
v2-use-mangum/server/: Dockerfile.local  database.py  docker-compose.yml  main.py  pyproject.toml  schemas.py  settings.py
v2-use-mangum/server/src/: database.py  schemas.py
