[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = "^0.23.0"
mangum = "^0.17.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.19"}
pydantic = {extras = ["dotenv"], version = "^2.0.3"}
pydantic-settings = "^2.0.2"
asyncpg = "^0.28.0"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
